---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E502 [*] Redundant backslash
  --> E502.py:9:9
   |
 7 |     + 4
 8 |
 9 | a = (3 -\
   |         ^
10 |     2 +   \
11 |     7)
   |
help: Remove redundant backslash
  |
9 - a = (3 -\
9 + a = (3 -
  |

E502 [*] Redundant backslash
  --> E502.py:10:11
   |
 9 | a = (3 -\
10 |     2 +   \
   |           ^
11 |     7)
   |
help: Remove redundant backslash
   |
10 -     2 +   \
10 +     2 +   
   |

E502 [*] Redundant backslash
  --> E502.py:14:9
   |
13 | z = 5 + \
14 |     (3 -\
   |         ^
15 |     2 +   \
16 |     7) + \
   |
help: Remove redundant backslash
   |
14 -     (3 -\
14 +     (3 -
   |

E502 [*] Redundant backslash
  --> E502.py:15:11
   |
13 | z = 5 + \
14 |     (3 -\
15 |     2 +   \
   |           ^
16 |     7) + \
17 |     4
   |
help: Remove redundant backslash
   |
15 -     2 +   \
15 +     2 +   
   |

E502 [*] Redundant backslash
  --> E502.py:23:17
   |
22 | b = [
23 |     2 + 4 + 5 + \
   |                 ^
24 |     44 \
25 |     - 5
   |
help: Remove redundant backslash
   |
23 -     2 + 4 + 5 + \
23 +     2 + 4 + 5 + 
   |

E502 [*] Redundant backslash
  --> E502.py:24:8
   |
22 | b = [
23 |     2 + 4 + 5 + \
24 |     44 \
   |        ^
25 |     - 5
26 | ]
   |
help: Remove redundant backslash
   |
24 -     44 \
24 +     44 
   |

E502 [*] Redundant backslash
  --> E502.py:29:11
   |
28 | c = (True and
29 |     False \
   |           ^
30 |     or False \
31 |     and True \
   |
help: Remove redundant backslash
   |
29 -     False \
29 +     False 
   |

E502 [*] Redundant backslash
  --> E502.py:30:14
   |
28 | c = (True and
29 |     False \
30 |     or False \
   |              ^
31 |     and True \
32 | )
   |
help: Remove redundant backslash
   |
30 -     or False \
30 +     or False 
   |

E502 [*] Redundant backslash
  --> E502.py:31:14
   |
29 |     False \
30 |     or False \
31 |     and True \
   |              ^
32 | )
   |
help: Remove redundant backslash
   |
31 -     and True \
31 +     and True 
   |

E502 [*] Redundant backslash
  --> E502.py:44:14
   |
43 | s = {
44 |     'x': 2 + \
   |              ^
45 |     2
46 | }
   |
help: Remove redundant backslash
   |
44 -     'x': 2 + \
44 +     'x': 2 + 
   |

E502 [*] Redundant backslash
  --> E502.py:55:12
   |
55 | x = {2 + 4 \
   |            ^
56 |   + 3}
   |
help: Remove redundant backslash
   |
55 - x = {2 + 4 \
55 + x = {2 + 4 
   |

E502 [*] Redundant backslash
  --> E502.py:61:9
   |
59 |     2 + 2  # \
60 |     + 3  # \
61 |     + 4 \
   |         ^
62 |     + 3
63 | )
   |
help: Remove redundant backslash
   |
61 -     + 4 \
61 +     + 4 
   |

E502 [*] Redundant backslash
  --> E502.py:82:12
   |
80 |     "xyz"
81 |
82 | x = ("abc" \
   |            ^
83 |     "xyz")
   |
help: Remove redundant backslash
   |
82 - x = ("abc" \
82 + x = ("abc" 
   |

E502 [*] Redundant backslash
  --> E502.py:86:11
   |
85 | x = [
86 |     "a" + \
   |           ^
87 | f"""
88 | b
   |
help: Remove redundant backslash
   |
86 -     "a" + \
86 +     "a" + 
   |

E502 [*] Redundant backslash
  --> E502.py:89:7
   |
87 | f"""
88 | b
89 | """ + \
   |       ^
90 |     "c"
91 | ]
   |
help: Remove redundant backslash
   |
89 - """ + \
89 + """ + 
   |

E502 [*] Redundant backslash
  --> E502.py:95:14
   |
94 | def foo():
95 |     x = (a + \
   |              ^
96 |         2)
   |
help: Remove redundant backslash
   |
95 -     x = (a + \
95 +     x = (a + 
   |
